gcc/testsuite/gdc.test/compilable/imports/imp22122.d
module imports.imp22122;

package struct Imp22122
{
}
